# openGL-tutorial

./: CMakeLists.txt  README.md
res/shaders/: Basic.shader
src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexBuffer.h  glad.c  glad.h  main.cpp
